--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorPrimary">@color/md_blue_grey_600</color>
+    <color name="colorPrimaryDark">@color/md_blue_grey_700</color>
+    <color name="colorAccent">@color/md_deep_orange_800</color>
+
     <color name="background">@color/md_grey_800</color>
     <color name="background_card">#353535</color>
     <color name="background_menu">#282828</color>
