--- a/app/src/main/res/layout/item_bg_image.xml
+++ b/app/src/main/res/layout/item_bg_image.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="60dp"
     android:layout_height="match_parent"
+    android:padding="3dp"
     android:orientation="vertical">
 
     <ImageView
