--- a/app/src/main/res/layout/item_bg_image.xml
+++ b/app/src/main/res/layout/item_bg_image.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="60dp"
+    android:layout_width="66dp"
     android:layout_height="match_parent"
-    android:padding="3dp"
+    android:padding="2dp"
     android:orientation="vertical">
 
     <ImageView
@@ -17,6 +17,7 @@
         android:id="@+id/tv_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:singleLine="true"
         android:gravity="center" />
 
 </LinearLayout>
