--- a/app/src/main/res/menu/book_source.xml
+++ b/app/src/main/res/menu/book_source.xml
@@ -18,36 +18,39 @@
         tools:ignore="AlwaysShowAction">
 
         <menu>
+
+            <item
+                android:id="@+id/menu_group_manage"
+                android:title="@string/group_manage" />
+
+            <item
+                android:id="@+id/action_sort"
+                android:title="@string/sort">
+
+                <menu>
+
+                    <item
+                        android:id="@+id/sort_manual"
+                        android:checkable="true"
+                        android:title="@string/sort_manual" />
+
+                    <item
+                        android:id="@+id/sort_auto"
+                        android:checkable="true"
+                        android:title="@string/sort_auto" />
+
+                    <item
+                        android:id="@+id/sort_pin_yin"
+                        android:checkable="true"
+                        android:title="@string/sort_pin_yin" />
+
+                </menu>
+
+            </item>
+
             <group android:id="@+id/source_group">
 
             </group>
-
-        </menu>
-
-    </item>
-
-    <item
-            android:id="@+id/action_sort"
-            android:icon="@drawable/ic_format_line_spacing"
-            android:title="@string/sort"
-            app:showAsAction="never">
-
-        <menu>
-
-            <item
-                android:id="@+id/sort_manual"
-                android:checkable="true"
-                android:title="@string/sort_manual" />
-
-            <item
-                android:id="@+id/sort_auto"
-                android:checkable="true"
-                android:title="@string/sort_auto" />
-
-            <item
-                android:id="@+id/sort_pin_yin"
-                android:checkable="true"
-                android:title="@string/sort_pin_yin" />
 
         </menu>
 
