--- a/app/src/main/res/menu/source_edit.xml
+++ b/app/src/main/res/menu/source_edit.xml
@@ -40,7 +40,7 @@
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/action_share_wifi"
+        android:id="@+id/menu_share_wifi"
         android:title="@string/wifi_share"
         app:showAsAction="never" />
 
