--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string-array name="bookshelf_layout">
+        <item>@string/layout_list</item>
+        <item>@string/layout_grid3</item>
+        <item>@string/layout_grid4</item>
+    </string-array>
+
     <string-array name="indent">
         <item>@string/indent_0</item>
         <item>@string/indent_1</item>
         <item>@string/indent_2</item>
         <item>@string/indent_3</item>
         <item>@string/indent_4</item>
-    </string-array>
-
-    <string-array name="book_group_array">
-        <item>@string/all_book</item>
-        <item>@string/pursue_more_book</item>
-        <item>@string/fattening_book</item>
-        <item>@string/finish_book</item>
-        <item>@string/local_book</item>
     </string-array>
 
     <string-array name="text_suffix">
