--- a/app/src/main/res/menu/source_edit.xml
+++ b/app/src/main/res/menu/source_edit.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_save"
+        android:id="@+id/menu_save"
         android:icon="@drawable/ic_save"
         android:title="@string/action_save"
         app:showAsAction="ifRoom" />
