--- a/app/src/main/res/layout/activity_replace_rule.xml
+++ b/app/src/main/res/layout/activity_replace_rule.xml
@@ -14,7 +14,7 @@
         app:title="@string/replace_purify" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_replace_rule"
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
