--- a/app/src/main/res/layout/item_find_book.xml
+++ b/app/src/main/res/layout/item_find_book.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp">
+    android:padding="10dp"
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/ll_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/background"
+        android:elevation="3dp"
         android:orientation="horizontal"
         tools:ignore="UseCompoundDrawables">
 
@@ -23,6 +25,8 @@
             android:id="@+id/iv_status"
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:src="@drawable/ic_add"
+            android:tint="@color/tv_text_secondary"
             tools:ignore="ContentDescription" />
 
     </LinearLayout>
