--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,9 +26,9 @@
     <color name="tv_btn_normal_black">#737373</color>
     <color name="tv_btn_press_black">#adadad</color>
 
-    <color name="tv_text_default">#de000000</color>
-    <color name="tv_text_secondary">#b2000000</color>
-    <color name="tv_text_summary">#8a000000</color>
+    <color name="tv_text_default">#0E0E0E</color>
+    <color name="tv_text_secondary">#2C2C2C</color>
+    <color name="tv_text_summary">#8A2C2C2C</color>
     <color name="tv_text_book_detail">#dfdfdf</color>
     <color name="menu_color_default">#383838</color>
 
