--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -21,9 +21,9 @@
     <color name="tv_btn_normal_black">#737373</color>
     <color name="tv_btn_press_black">#565656</color>
 
-    <color name="tv_text_default">#ffffffff</color>
-    <color name="tv_text_secondary">#e5ffffff</color>
-    <color name="tv_text_summary">#b3ffffff</color>
+    <color name="tv_text_default">#EEEEEE</color>
+    <color name="tv_text_secondary">#D5D5D5</color>
+    <color name="tv_text_summary">#B3B3B3</color>
     <color name="menu_color_default">#b7b7b7</color>
 
 
